complete the check email action

--- a/localization/en/auth.json
+++ b/localization/en/auth.json
@@ -9,12 +9,18 @@
   },
   "login": {
     "title": "Sign in to your account",
-    "submit": "Sign In"
+    "submit": "Sign In",
+    "loading": "Signing in..."
+  },
+  "captcha": {
+    "loading": "Robot verification in progress..."
   },
   "register": {
     "title": "Create account",
-    "submit": "Register"
+    "submit": "Register",
+    "loading": "Registering..."
   },
+  "an-error": "An error occurred",
   "policy": {
     "text": "<termsOfUse></termsOfUse>,<space></space><privacyNotify></privacyNotify><space></space>and<space></space><privacyPolicy></privacyPolicy>' I have read and accept it.",
     "termsOfUse": "Terms of Use",
