--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -9,12 +9,18 @@
   },
   "login": {
     "title": "Hesabınıza giriş yapın",
-    "submit": "Giriş Yap"
+    "submit": "Giriş Yap",
+    "loading": "Giriş yapılıyor..."
+  },
+  "captcha": {
+    "loading": "Robot doğrulaması yapılıyor..."
   },
   "register": {
     "title": "Hesap oluşturun",
-    "submit": "Kayıt Ol"
+    "submit": "Kayıt Ol",
+    "loading": "Kayıt olunuyor..."
   },
+  "an-error": "Bir hata oluştu",
   "policy": {
     "text": "<termsOfUse></termsOfUse>,<space></space><privacyNotify></privacyNotify><space></space>ve<space></space><privacyPolicy></privacyPolicy>'nı okudum ve kabul ediyorum.",
     "termsOfUse": "Kullanım Koşulları",
