update the register views privacy

--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -22,6 +22,7 @@
   },
   "an-error": "Bir hata oluştu",
   "policy": {
+    "label": "Kullanım Koşulları ve Gizlilik Politikası'nı okudum ve kabul ediyorum.",
     "text": "<termsOfUse></termsOfUse>,<space></space><privacyNotify></privacyNotify><space></space>ve<space></space><privacyPolicy></privacyPolicy>'nı okudum ve kabul ediyorum.",
     "termsOfUse": "Kullanım Koşulları",
     "privacyNotify": "Gizlilik Bildirimi",
