--- a/localization/en/auth.json
+++ b/localization/en/auth.json
@@ -22,6 +22,7 @@
   },
   "an-error": "An error occurred",
   "policy": {
+    "label": "By clicking 'Register' you agree to the terms of use and privacy policy.",
     "text": "<termsOfUse></termsOfUse>,<space></space><privacyNotify></privacyNotify><space></space>and<space></space><privacyPolicy></privacyPolicy>' I have read and accept it.",
     "termsOfUse": "Terms of Use",
     "privacyNotify": "Privacy Notice",
