fix panel layout

--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -16,7 +16,7 @@
     "loading": "Robot doğrulaması yapılıyor..."
   },
   "register": {
-    "title": "Hesap oluşturun",
+    "title": "Kayıt Ol",
     "submit": "Kayıt Ol",
     "loading": "Kayıt olunuyor..."
   },
