update the header and panel

--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -2,7 +2,8 @@
   "apps": "Tüm Uygulamalar",
   "route": "Rota",
   "home": "Anasayfa",
-  "panel": "Panel",
+  "board": "Kontrol Paneli",
   "auth": "Giriş Yap",
-  "register": "Kayıt Ol"
+  "register": "Kayıt Ol",
+  "help/index": "Yardım"
 }
