--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -5,5 +5,6 @@
   "board": "Kontrol Paneli",
   "auth": "Giriş Yap",
   "register": "Kayıt Ol",
-  "help/index": "Yardım"
+  "help/index": "Yardım",
+  "account": "Hesap"
 }
