--- a/localization/tr/account.json
+++ b/localization/tr/account.json
@@ -7,7 +7,11 @@
     "title": "Profil Oluştur"
   },
   "edit": {
-    "title": "Profili Düzenle"
+    "title": "Profili Düzenle",
+    "picture": {
+      "change": "Profil Resmini Değiştir",
+      "uploaded": "Profil resmi yüklendi. Profil resminizin görünmesi biraz zaman alabilir."
+    }
   },
   "completion": {
     "title": "Profil Doluluk Oranı",
