--- a/localization/en/auth.json
+++ b/localization/en/auth.json
@@ -10,19 +10,19 @@
   "login": {
     "title": "Sign in to your account",
     "submit": "Sign In",
-    "loading": "Signing in..."
+    "loading": "Logging in..."
   },
   "captcha": {
     "loading": "Robot verification in progress..."
   },
   "register": {
-    "title": "Create account",
+    "title": "Register",
     "submit": "Register",
     "loading": "Registering..."
   },
   "an-error": "An error occurred",
   "policy": {
-    "label": "By clicking 'Register' you agree to the terms of use and privacy policy.",
+    "label": "I have read and accept the Terms of Use and Privacy Policy.",
     "text": "<termsOfUse></termsOfUse>,<space></space><privacyNotify></privacyNotify><space></space>and<space></space><privacyPolicy></privacyPolicy>' I have read and accept it.",
     "termsOfUse": "Terms of Use",
     "privacyNotify": "Privacy Notice",
