add devices view skeleton

--- a/localization/en/panel.json
+++ b/localization/en/panel.json
@@ -6,6 +6,7 @@
   "login": "Sign In",
   "manage": "Manage Your Account",
   "invite": "Invite Friends",
+  "devices": "Manage Devices",
   "profile": {
     "select": "Select Profile",
     "view": "View My Profile",
