--- a/localization/tr/panel.json
+++ b/localization/tr/panel.json
@@ -6,6 +6,7 @@
   "login": "Giriş Yap",
   "manage": "Hesabını Yönet",
   "invite": "Arkadaşlarını Davet Et",
+  "devices": "Cihazları Yönet",
   "profile": {
     "select": "Profil Seç",
     "view": "Profilimi Görüntüle",
