--- a/localization/tr/devices.json
+++ b/localization/tr/devices.json
@@ -21,5 +21,9 @@
       "bot": "Bot",
       "unknown": "Bilinmiyor"
     }
+  },
+  "confirm": {
+    "others": "Diğer cihazları yok etmek istediğinize emin misiniz? Eğer onaylarsanız şu an giriş yaptığınız cihaz hariç tüm cihazlardan çıkış yapacaksınız.",
+    "destroy": "Bu cihazı yok etmek istediğinize emin misiniz? Eğer onaylarsanız bu cihazdaki oturum kaldırılacak."
   }
 }
