--- a/localization/tr/manage.json
+++ b/localization/tr/manage.json
@@ -1,5 +1,8 @@
 {
   "alert": "Hesabınızı sildikten sonra 30 gün içinde tekrar giriş yaparsanız hesabınızı geri alabilirsiniz. 30 gün içinde giriş yapmazsanız hesabınız kalıcı olarak silinecektir.",
   "confirm": "Hesabınızı silmek istediğinize emin misiniz? Bu işlem geri alınamaz.",
-  "button": "Hesabımı Sil"
+  "button": "Hesabımı Sil",
+  "captcha": {
+    "loading": "Robot doğrulaması yapılıyor..."
+  }
 }
