--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -7,5 +7,6 @@
   "register": "Kayıt Ol",
   "help/index": "Yardım",
   "account": "Hesap",
-  "manage": "Hesabını Yönet"
+  "manage": "Hesabını Yönet",
+  "about": "Hakkında"
 }
