fix about view text capitalize

--- a/localization/en/about.json
+++ b/localization/en/about.json
@@ -1,3 +1,3 @@
 {
-  "description": "turistikrota is a mobile application developed by the Turistikrota.com technology team."
+  "description": "turistikrota is a mobile application developed by the turistikrota.com technology team."
 }
