fix header design

--- a/localization/en/panel.json
+++ b/localization/en/panel.json
@@ -7,6 +7,7 @@
   "manage": "Manage Your Account",
   "invite": "Invite Friends",
   "devices": "Manage Devices",
+  "about": "About Application",
   "profile": {
     "select": "Select Profile",
     "view": "View My Profile",
