--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -8,5 +8,5 @@
   "help/index": "Yardım",
   "account": "Hesap",
   "manage": "Hesabını Yönet",
-  "about": "Hakkında"
+  "about": "Uygulama Hakkında"
 }
