--- a/localization/tr/panel.json
+++ b/localization/tr/panel.json
@@ -7,6 +7,7 @@
   "manage": "Hesabını Yönet",
   "invite": "Arkadaşlarını Davet Et",
   "devices": "Cihazları Yönet",
+  "about": "Uygulama Hakkında",
   "profile": {
     "select": "Profil Seç",
     "view": "Profilimi Görüntüle",
