--- a/localization/en/menu.json
+++ b/localization/en/menu.json
@@ -7,6 +7,6 @@
   "register": "Register",
   "help/index": "Help",
   "account": "Account",
-  "about": "About",
+  "about": "About Application",
   "manage": "Manage Account"
 }
