--- a/localization/en/panel.json
+++ b/localization/en/panel.json
@@ -8,6 +8,7 @@
   "invite": "Invite Friends",
   "devices": "Manage Devices",
   "about": "About Application",
+  "change-password": "Change Password",
   "profile": {
     "select": "Select Profile",
     "view": "View My Profile",
