--- a/localization/tr/manage.json
+++ b/localization/tr/manage.json
@@ -4,5 +4,6 @@
   "button": "Hesabımı Sil",
   "captcha": {
     "loading": "Robot doğrulaması yapılıyor..."
-  }
+  },
+  "loading": "Siliniyor..."
 }
