--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -8,5 +8,6 @@
   "help/index": "Yardım",
   "account": "Hesap",
   "manage": "Hesabını Yönet",
-  "about": "Uygulama Hakkında"
+  "about": "Uygulama Hakkında",
+  "change-password": "Şifre Değiştir"
 }
