--- a/localization/tr/panel.json
+++ b/localization/tr/panel.json
@@ -8,6 +8,7 @@
   "invite": "Arkadaşlarını Davet Et",
   "devices": "Cihazları Yönet",
   "about": "Uygulama Hakkında",
+  "change-password": "Şifre Değiştir",
   "profile": {
     "select": "Profil Seç",
     "view": "Profilimi Görüntüle",
