--- a/localization/en/manage.json
+++ b/localization/en/manage.json
@@ -4,5 +4,6 @@
   "button": "Delete My Account",
   "captcha": {
     "loading": "Robot verification in progress..."
-  }
+  },
+  "loading": "Deleting..."
 }
