add resend view

--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -20,6 +20,11 @@
     "submit": "Kayıt Ol",
     "loading": "Kayıt olunuyor..."
   },
+  "resend": {
+    "submit": "Yeni Kod Gönder",
+    "loading": "Gönderiliyor...",
+    "success": "E-posta adresinize yeni bir doğrulama kodu gönderildi. Lütfen e-posta adresinizi kontrol ediniz."
+  },
   "an-error": "Bir hata oluştu",
   "policy": {
     "label": "Kullanım Koşulları ve Gizlilik Politikası'nı okudum ve kabul ediyorum.",
