--- a/localization/en/auth.json
+++ b/localization/en/auth.json
@@ -20,6 +20,22 @@
     "submit": "Register",
     "loading": "Registering..."
   },
+  "resend": {
+    "title": "Resend Verification Code",
+    "submit": "Send New Code",
+    "alert": "Resending code can be used if the previous code is not valid within 24 hours.",
+    "loading": "Sending...",
+    "success": "A new verification code has been sent to your e-mail address. Please check your e-mail address."
+  },
+  "activate": {
+    "title": "Activate Account",
+    "invalidCode": "Invalid verification code",
+    "success": "Your account has been successfully verified. Please log in.",
+    "loading": "Verifying...",
+    "submit": "Verify",
+    "notHave": "Don't have a verification code?",
+    "link": "Send new code"
+  },
   "an-error": "An error occurred",
   "policy": {
     "label": "I have read and accept the Terms of Use and Privacy Policy.",
