--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -21,9 +21,20 @@
     "loading": "Kayıt olunuyor..."
   },
   "resend": {
+    "title": "Doğrulama Kodu Gönder",
     "submit": "Yeni Kod Gönder",
+    "alert": "Yeniden kod gönderme işlemi bir önceki kod 24 saat içinde geçerli değilse kullanılabilir.",
     "loading": "Gönderiliyor...",
     "success": "E-posta adresinize yeni bir doğrulama kodu gönderildi. Lütfen e-posta adresinizi kontrol ediniz."
+  },
+  "activate": {
+    "resend": "Hesabı Doğrula",
+    "invalidCode": "Geçersiz doğrulama kodu",
+    "success": "Hesabınız başarıyla doğrulandı. Lütfen giriş yapınız.",
+    "loading": "Doğrulanıyor...",
+    "submit": "Doğrula",
+    "notHave": "Doğrulama kodunuz yok mu?",
+    "link": "Yeni kod gönder"
   },
   "an-error": "Bir hata oluştu",
   "policy": {
