fix all auth views

--- a/localization/tr/auth.json
+++ b/localization/tr/auth.json
@@ -18,7 +18,8 @@
   "register": {
     "title": "Kayıt Ol",
     "submit": "Kayıt Ol",
-    "loading": "Kayıt olunuyor..."
+    "loading": "Kayıt olunuyor...",
+    "success": "Kayıt işlemi başarıyla tamamlandı. Lütfen e-posta adresinizi kontrol ediniz."
   },
   "resend": {
     "title": "Doğrulama Kodu Gönder",
