--- a/localization/en/auth.json
+++ b/localization/en/auth.json
@@ -18,7 +18,8 @@
   "register": {
     "title": "Register",
     "submit": "Register",
-    "loading": "Registering..."
+    "loading": "Registering...",
+    "success": "Your account has been successfully created. Please check your e-mail address."
   },
   "resend": {
     "title": "Resend Verification Code",
