--- a/localization/en/menu.json
+++ b/localization/en/menu.json
@@ -11,5 +11,6 @@
   "activate": "Activate Account",
   "about": "About Application",
   "manage": "Manage Account",
+  "vision": "Our Vision",
   "change-password": "Change Password"
 }
