--- a/localization/tr/menu.json
+++ b/localization/tr/menu.json
@@ -11,5 +11,6 @@
   "account": "Hesap",
   "manage": "Hesabını Yönet",
   "about": "Uygulama Hakkında",
-  "change-password": "Şifre Değiştir"
+  "change-password": "Şifre Değiştir",
+  "vision": "Vizyonumuz"
 }
