--- a/localization/tr/place.json
+++ b/localization/tr/place.json
@@ -133,6 +133,21 @@
     "health": "Sağlık",
     "sport": "Spor",
     "nightlife": "Gece Hayatı",
-    "other": "Diğer"
+    "other": "Diğer",
+    "desc": {
+      "eating": "Burada yemek yiyebilirsiniz.",
+      "coffee": "Burada kahve içebilirsiniz.",
+      "bar": "Burada alkollü içecekler içebilirsiniz.",
+      "beach": "Bu bir plajdır.",
+      "amaze": "Burada eğlenceli vakit geçirebilirsiniz.",
+      "shopping": "Burada alışveriş yapabilirsiniz.",
+      "transport": "Buradan toplu taşıma araçlarına binebilirsiniz.",
+      "culture": "Burada yeni şeyler öğrenebilirsiniz.",
+      "nature": "Burada doğanın tadını çıkarabilirsiniz.",
+      "health": "Burada tıbbi yardım alabilirsiniz.",
+      "sport": "Burada spor yapabilirsiniz.",
+      "nightlife": "Burada gece eğlenceli vakit geçirebilirsiniz.",
+      "other": "Burada başka aktiviteler yapabilirsiniz."
+    }
   }
 }
