fix the document pages

--- a/localization/en/panel.json
+++ b/localization/en/panel.json
@@ -8,6 +8,7 @@
   "invite": "Invite Friends",
   "devices": "Manage Devices",
   "about": "About Application",
+  "about-us": "About Us",
   "change-password": "Change Password",
   "personal-data": "Clarification Text",
   "privacy-note": "Privacy Policy",
