--- a/localization/tr/panel.json
+++ b/localization/tr/panel.json
@@ -8,6 +8,7 @@
   "invite": "Arkadaşlarını Davet Et",
   "devices": "Cihazları Yönet",
   "about": "Uygulama Hakkında",
+  "about-us": "Hakkımızda",
   "change-password": "Şifre Değiştir",
   "personal-data": "Aydınlatma Metni",
   "privacy-note": "Gizlilik Politikası",
